--- a/CSS/style.css
+++ b/CSS/style.css
@@ -174,6 +174,37 @@
     padding: 10px;
 }
 
+.corazon {
+    width: 100px;
+    margin: auto;
+    animation: corazao 3s infinite;
+    padding: 10px;
+
+}
+.corazon img {
+
+    width: 100%;
+}
+
+@keyframes corazao {
+    0% {
+
+        transform: scale(1);
+    }
+
+    50% { 
+
+        transform: scale(1.5);
+    }
+
+    100% {
+
+        transform: scale(1);
+    }
+}
+
+
+
 /*5.html Keyframe*/
 
 @keyframes balon{
